--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 	<link rel='stylesheet' href='/build/bundle.css'>
 
 	<script defer src='/build/bundle.js'></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.7.0/web3.min.js"></script>
 </head>
 
 <body>
